2005-02-02  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c: (update_theme_index),
	(real_add_top_theme_dir_monitor): More bandaids for test
	purposes.

2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c: (top_theme_dir_changed),
	(top_icon_theme_dir_changed), (real_add_top_theme_dir_monitor):
	Try to fix bug #149236 by not freeing stuff already being free'd
	by the hash destroy_func. It will leak a bit more, but that can
	be fixed later. Please test this and report success in the report
	mentioned above.

2005-01-02  Thomas Cataldo  <thomas.cataldo@aliacom.fr>

	* gconf-property-editor.c: (gconf_property_editor_finalize): plug
	gconf key leak.

2004-11-24  Kjartan Maraas  <kmaraas@gnome.org>

	* activate-settings-daemon.c: (popup_error_message):
	ANSIfication.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-07  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=130623
	* capplet-util.c (capplet_set_icon) : respect the icon theme

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	* gconf-property-editor.c (peditor_image_clicked_cb) : Use the monitor
	  size kludge for the vertical size of the new file selector.

2003-12-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* gconf-property-editor.c: (peditor_image_set_filename),
	(peditor_image_chooser_response_cb),
	(peditor_image_chooser_update_preview_cb),
	(peditor_image_clicked_cb): replace
	PreviewFileSelection (GtkFileSelection) with GtkFileChooser, use new
	gdk_pixbuf_new_from_file_at_size method to load a scaled image.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>
